Reach the editor through the module screen the React UI draws
The JSF interface was removed in EPBDS-16599, and with it the Editor tab the
tests switched to. A module is now opened from its project's card, so the
project/module selector, the tables tree, the problems panel, the toolbars and
the breadcrumbs are read from the React screens instead. KNOWN-ISSUES.md
records what the new UI no longer offers.